--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "socket-io:serve": "vue-cli-service serve --mode socket-io",
+    "sock-js:serve": "vue-cli-service serve --mode sock-js",
+    "socket-io:build": "vue-cli-service build",
+    "sock-js:build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -15,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/sockjs-client": "^1.5.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -26,6 +29,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.2",
+    "socket.io-client": "^4.6.1",
+    "sockjs-client": "^1.6.1",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
