--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Simple MMO RPG pixel game based on websocket.",
   "main": "index.js",
   "scripts": {
-    "serve": "ts-node-dev --respawn ./src/index.ts",
+    "socket-io:serve": "npm run database:run && SERVER_MODE=socket-io ts-node-dev --respawn index.ts",
+    "sock-js:serve": "npm run database:run && SERVER_MODE=sock-js ts-node-dev --respawn index.ts",
+    "database:run": "sudo docker stop $(sudo docker ps -aq) && sudo docker start simple-adventure-db && sudo docker start simple-adventure-phpmyadmin",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +23,14 @@
     "@tsconfig/node16": "^1.0.3",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
+    "@types/sockjs": "^0.3.33",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "i": "^0.3.7",
+    "mysql": "^2.18.1",
+    "npm": "^9.6.2",
+    "socket.io": "^4.6.1",
+    "sockjs": "^0.3.24",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
