--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@types/sockjs-client": "^1.5.1",
+    "@types/vue-router": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -31,7 +32,9 @@
     "sass-loader": "^13.0.2",
     "socket.io-client": "^4.6.1",
     "sockjs-client": "^1.6.1",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-router": "^4.1.6",
+    "vue3-toastify": "^0.1.6"
   },
   "eslintConfig": {
     "root": true,
