--- a/server/socket-io/.env
+++ b/server/socket-io/.env
@@ -1,5 +1,5 @@
 SERVER_PORT=8080
-SERVER_DB_HOST=172.17.0.2
+SERVER_DB_HOST=simple-adventure-db
 SERVER_DB_DATABASE=SimpleAdventure
 SERVER_DB_USER=root
 SERVER_DB_PASSWORD=123456
