--- a/server/docker-compose-socket-io.yml
+++ b/server/docker-compose-socket-io.yml
@@ -36,7 +36,7 @@ services:
     links:
       - simple-adventure-db
     volumes:
-      - ~/www/simple-adventure/:/var/www/html
+      - ~/www/simple-adventure/server/:/var/www/html
     ports:
       - "3002:8080"
     stdin_open: true
