--- a/server/package.json
+++ b/server/package.json
@@ -21,9 +21,8 @@
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@types/express": "^4.17.13",
-    "@types/node": "^18.0.3",
+    "@types/node": "^18.18.6",
     "@types/sockjs": "^0.3.33",
-    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "i": "^0.3.7",
     "mysql": "^2.18.1",
@@ -31,8 +30,11 @@
     "socket.io": "^4.6.1",
     "sockjs": "^0.3.24",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "keywords": []
 }
