--- a/server/package.json
+++ b/server/package.json
@@ -20,21 +20,23 @@
   "homepage": "https://github.com/Adsel/simple-adventure#readme",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^18.18.6",
     "@types/sockjs": "^0.3.33",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.1",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "npm": "^9.6.2",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^4.6.1",
     "sockjs": "^0.3.24",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
-  },
-  "dependencies": {
+    "typeorm": "^0.3.17",
+    "typescript": "^4.7.4"
   },
   "keywords": []
 }
