--- a/server/docker-compose-sock-js.yml
+++ b/server/docker-compose-sock-js.yml
@@ -36,7 +36,7 @@ services:
     links:
       - simple-adventure-db2
     volumes:
-      - ~/www/simple-adventure/:/var/www/html
+      - ~/www/simple-adventure/server/:/app
     ports:
       - "3001:8080"
     stdin_open: true
