--- a/server/docker-compose-socket-io.yml
+++ b/server/docker-compose-socket-io.yml
@@ -36,8 +36,7 @@ services:
     links:
       - simple-adventure-db
     volumes:
-      - ~/www/simple-adventure/server/:/var/www/html
-      - ~/www/simple-adventure/server/socket-io/.env:/app/.env
+      - ~/www/simple-adventure/server/:/app
     ports:
       - "3002:8080"
     stdin_open: true
