--- a/game/server/package.json
+++ b/game/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "docker-compose -f docker-compose-socket-io.yml up",
-    "socket-io:serve": "SERVER_MODE=socket-io nodemon --exec node --loader ts-node/esm --respawn src/index.ts",
+    "socket-io:serve": "SERVER_MODE=socket-io ts-node-dev --respawn src/index.ts",
+    "socket-io:serve2": "SERVER_MODE=socket-io nodemon --exec node --loader ts-node/esm --respawn src/index.ts",
     "sock-js:serve": "SERVER_MODE=sock-js ts-node-dev --respawn src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,11 +21,9 @@
   },
   "homepage": "https://github.com/Adsel/simple-adventure#readme",
   "devDependencies": {
-    "@tsconfig/node20": "^20.1.4",
     "@types/bcrypt": "^5.0.1",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.4",
-    "@types/node": "^20.14.2",
     "@types/sockjs": "^0.3.33",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
