--- a/game/server/tsconfig.json
+++ b/game/server/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "moduleResolution": "Node",
-    "module": "ESNext",
-    "target": "ESNext"
+    "target": "ES2020",
+    "module": "commonjs",
+    "strict": true
   },
   "include": [
     "src/**/*.ts"
