--- a/game/server/tsconfig.json
+++ b/game/server/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "strict": true
+    "strict": true,
+    "experimentalDecorators": true
   },
   "include": [
     "src/**/*.ts"
