--- a/game/client/package.json
+++ b/game/client/package.json
@@ -16,6 +16,7 @@
     "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
+    "shared": "*",
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
