fix: serving docker server

--- a/game/package.json
+++ b/game/package.json
@@ -9,7 +9,7 @@
     "server:build": "cd ./server && npm run build",
     "client:socket-io:serve": "cd ./client && npm run socket-io:serve",
     "client:sock-js:serve": "cd ./client && npm run sock-js:serve",
-    "server:socket-io:serve": "cd ./server && npm run socket-io:serve",
+    "server:socket-io:serve": "cd ./server && npm run socket-io:serve2",
     "server:sock-js:serve": "cd ./server && npm run sock-js:serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
