--- a/game/server/Dockerfile
+++ b/game/server/Dockerfile
@@ -10,8 +10,6 @@ RUN ls -la
 RUN echo "Building server with mode: "
 RUN echo $serverMode
 
-RUN npm install
-
 EXPOSE 8080 80
 
-CMD npm run ${SERVER_MODE}:serve
+CMD npm install && npm run ${SERVER_MODE}:serve
