--- a/game/server/docker-compose-sock-js.yml
+++ b/game/server/docker-compose-sock-js.yml
@@ -31,6 +31,7 @@ services:
     container_name: simple-adventure-sock-js
     environment:
       - DB_NAME=SimpleAdventure
+      - SERVER_MODE=sockjs
     depends_on:
       - simple-adventure-db2
     links:
