--- a/game/server/docker-compose-socket-io.yml
+++ b/game/server/docker-compose-socket-io.yml
@@ -31,6 +31,7 @@ services:
     container_name: simple-adventure-socket-io
     environment:
       - DB_NAME=SimpleAdventure
+      - SERVER_MODE=socket-io
     depends_on:
       - simple-adventure-db
     links:
