--- a/game/server/package.json
+++ b/game/server/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "docker-compose -f docker-compose-socket-io.yml up",
-    "socket-io:serve": "SERVER_MODE=socket-io ts-node-dev --respawn src/index.ts",
-    "socket-io:serve2": "SERVER_MODE=socket-io nodemon --exec node --loader ts-node/esm --respawn src/index.ts",
-    "sock-js:serve": "SERVER_MODE=sock-js ts-node-dev --respawn src/index.ts",
+    "socket-io:serve": "SERVER_MODE=socket-io npx ts-node-dev --respawn src/index.ts",
+    "sock-js:serve": "SERVER_MODE=sock-js npx ts-node-dev --respawn src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +29,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "nodemon": "^3.1.4",
     "npm": "^10.8.1",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.6.1",
