refactor: fixed shared files for game/client

--- a/game/client/docker-compose.yml
+++ b/game/client/docker-compose.yml
@@ -9,5 +9,6 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+      - ../shared:/app/shared
     environment:
       - NODE_ENV=development
